2003-08-29  Derek Price  <derek@ximbiot.com>

	* cvs.h: Delete reference to CVSADMROOT_EDITINFO.
	* logmsg.c (editinfo_proc): Delete function and proto.
	(do_editor): Don't look for editinfo script.
	* mkmodules.c (editinfo_contents): Delete.
	* sanity.sh (*): Remove references to editinfo in updates of the
	CVSROOT module.

2003-08-29  Derek Price  <derek@ximbiot.com>

	* remove.c (cvsremove): Update quotes for consistency.

2003-08-27  Larry Jones  <lawrence.jones@eds.com>

	* history.c: 'P' is a valid record type and has been for a long time.
	Add it to the comments, usage message, and, most important,
	ALL_REC_TYPES so it gets recorded by default.
	* server.c (do_cvs_command): Set global command_name to the real
	command name rather than leaving it set to "server".
	* sanity.sh: Update to match.
	(Reported by Dmitry Ryzhkov <rdim_outside@softhome.net>.)

2003-08-19  Derek Price  <derek@ximbiot.com>

	* filesubr.c (cvs_temp_file): Expand comments.  Check for glibc version
	before compiling chmod command.  Remove FIXME to this effect.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* logmsg.c (do_editor): Use cvs_temp_file rather than cvs_temp_name to
	create and open the temporary file.  Remove FIXME to this effect.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* logmsg.c (do_editor): Move editinfo processing to before creation of
	the temp file so that it may be skipped when no editor is defined.
	Remove related FIXME.  Add comments.  Remove some processing of
	editinfo_editor rendered obsolete when editinfo_editor ceased to be a
	global.

2003-08-19  Derek Price  <derek@ximbiot.com>

	* (*.c): Move some includes to lib/system.h.

2003-08-18  Derek Price  <derek@ximbiot.com>

	* add.c (add): Use consistent quoting style in user messages.
	* sanity.sh (*): Ditto.

2003-08-13  Larry Jones  <lawrence.jones@eds.com>

	* server.c (server_cleanup): Don't shutdown buf_from_net if it's
	null.
	(Reported by Scott Mitchell <scott@fishballoon.org>.)
